--- a/index.html
+++ b/index.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
-<link rel="stylesheet" href="styles/pageLayout.css">
-<link rel="stylesheet" href="styles/colorScheme.css">
-<link rel="stylesheet" href="styles/general.css">
-<link rel="stylesheet" href="styles/treeView.css">
-<link rel="stylesheet" href="styles/resourceBreakDownTable.css">
-<script src="utility.js"></script>
-<script src="recipeData.js"></script>
-<script src="priceData.js"></script>
-<script src="itemStack.js"></script>
-<script src="recipe.js"></script>
-<script src="recipeNode.js"></script>
-<script src="item.js"></script>
-<script src="UIFunctions.js"></script>
-<script src="script.js"></script>
+<head>
+  <title>Age of Trades - NEI</title>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="styles/pageLayout.css">
+  <link rel="stylesheet" href="styles/colorScheme.css">
+  <link rel="stylesheet" href="styles/general.css">
+  <link rel="stylesheet" href="styles/treeView.css">
+  <link rel="stylesheet" href="styles/resourceBreakDownTable.css">
+  <script src="utility.js"></script>
+  <script src="recipeData.js"></script>
+  <script src="priceData.js"></script>
+  <script src="itemStack.js"></script>
+  <script src="recipe.js"></script>
+  <script src="recipeNode.js"></script>
+  <script src="item.js"></script>
+  <script src="UIFunctions.js"></script>
+  <script src="script.js"></script>
+</head>
+
+
 
 </ul>
 <body onload="onload()">
