cleaned up the design and design structure

--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
           <ul id="itemList"></ul>
         </div>
         <div id="recipeTree">
-          <h2>Recipe Tree:</h2>
+          <div class="header">Recipe Tree:</div>
           <ul id="recipeDisplay" class="trimmed"></ul>
         </div>
         <div id="resourceBreakDown">
-          <h2>Resource Breakdown:</h2>
+          <div class="header">Resource Breakdown:</div>
         </div>
         <div id="recipeList">
-          <h2>Recipe List:</h2>
+          <div class="header">Recipe List:</div>
           Coming Soon
         </div>
       </div>
