--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <script src="itemLogic/recipe.js"></script>
   <script src="treeLogic/recipeNode.js"></script>
   <script src="treeLogic/treeMethods.js"></script>
-  <script src="rawDataHandling/exImport.js"></script>
+  <script src="rawDataHandling/exImRawPriceData.js"></script>
+  <script src="rawDataHandling/exImRawRecipeData.js"></script>
   <script src="settings/settings.js"></script>
   <script src="UIFunctions.js"></script>
   <script src="script.js"></script>
@@ -49,6 +50,15 @@
         </div>
       </div>
       <div id="settingsTab" style="display:none">
+        <div id="exImport" class="column">
+          <div class="fancyListItem hoverable flexCol" onclick="exportPriceList()">Export Price Settings</div>
+          <div class="fancyListItem hoverable flexCol" onclick="importPriceList()">Import Price Settings</div>
+          <div class="fancyListItem hoverable flexCol" onclick="resetPriceList()">Reset Price Settings</div>
+          <div class="fancyListItem"></div>
+          <div class="fancyListItem hoverable flexCol" onclick="exportRecipeList()">Export Recipe Settings</div>
+          <div class="fancyListItem hoverable flexCol" onclick="importRecipeList()">Import Recipe Settings</div>
+          <div class="fancyListItem hoverable flexCol" onclick="resetRecipeList()">Reset Recipe Settings</div>
+        </div>
         <div id="settings" class="column">
           <div class="fancyListItem">
               <span>Start the recipe tree expanded</span>
@@ -58,11 +68,6 @@
               <span>Time per craft: </span>
               <input type="text" id="settingsTimePerCraft" class="fancyInput" onkeyup="updateSetting('settingsTimePerCraft')" value=0></input>
           </div>
-        </div>
-        <div id="exImport" class="column">
-          <div class="fancyListItem hoverable flexCol" onclick="exportPriceList()">Export Price Settings</div>
-          <div class="fancyListItem hoverable flexCol" onclick="importPriceList()">Import Price Settings</div>
-          <div class="fancyListItem hoverable flexCol" onclick="resetPriceList()">Reset Price Settings</div>
         </div>
       </div>
     </div>
