+added the ability to change the recipe success chance changed how recipes objects are stored

--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
         </div>
         <div id="recipeOptions">
           <div class="header">Options:</div>
+          <br>
+          <div id="recipeSuccessChance" class="fancyListItem">
+            <span>Success chance:</span>
+            <input class="fancyInput recipeOptionInput" type="text" onkeyup="handleRecipeSuccessChanceInput(event)" name="successChance" autocomplete="off"></input>
+          </div>
         </div>
       </div>
       <div id="settingsTab" class="tab" style="display:none">
