updated recipe data and default recipe success chance

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="styles/treeView.css">
   <link rel="stylesheet" href="styles/resourceBreakDownTable.css">
   <script src="utility.js"></script>
-  <script src="defaultData/recipeData.js"></script>
+  <script src="defaultData/craftingRecipeData.js"></script>
   <script src="defaultData/priceData.js"></script>
   <script src="defaultData/recipeSuccessChances.js"></script>
   <script src="itemLogic/itemStack.js"></script>
@@ -20,6 +20,7 @@
   <script src="recipeLogic/recipeSearchList.js"></script>
   <script src="treeLogic/recipeNode.js"></script>
   <script src="treeLogic/treeMethods.js"></script>
+  <script src="rawDataHandling/createDefaultRawData.js"></script>
   <script src="rawDataHandling/exImRawPriceData.js"></script>
   <script src="rawDataHandling/exImRecipeSuccessChance.js"></script>
   <script src="settings/settings.js"></script>
