+added mining recipes changed name of cookingheat to cooking heat

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <script src="defaultData/priceData.js"></script>
   <script src="defaultData/recipeSuccessChances.js"></script>
   <script src="defaultData/cookingRecipeData.js"></script>
+  <script src="defaultData/miningRecipeData.js"></script>
   <script src="itemLogic/itemStack.js"></script>
   <script src="itemLogic/item.js"></script>
   <script src="recipeLogic/recipe.js"></script>
