updated the looks of displayed recipes

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="styles/general.css">
   <link rel="stylesheet" href="styles/treeView.css">
   <link rel="stylesheet" href="styles/resourceBreakDownTable.css">
+  <link rel="stylesheet" href="styles/utility.css">
   <script src="utility.js"></script>
   <script src="defaultData/craftingRecipeData.js"></script>
   <script src="defaultData/priceData.js"></script>
