updated the Notes&FAQ

--- a/index.html
+++ b/index.html
@@ -109,10 +109,25 @@
         <div id="restSettings"></div>
       </div>
       <div id="FAQTab" class="tab" style="display:none">
-        <h1>Important notes:</h1><br>
-        <p>
-          - You can only cook with burnables that burn at least as long as your food requires, this calculator simply ignores this fact for now.
-        </p>
+        <div class="FAQPoint">
+          <h1 class="FAQquestion">How does this page work?</h1>
+          <p>
+            This page calculates what items are needed to create another item and how much profit you can make.
+            <br>
+            Here's a list of what you can do in what tab:
+            <ul class="FAQul">
+              <li>Main: Here you can search for an item! In the middle you can see the chain of recipes that are used to make that item. On the right you will see all the resources needed and potential leftovers.</li>
+              <li>Recipes: Here you can look at all available recipes. You can change the chance at which a recipe succeeds to what it is for you in the game. You can also disable recipes so that in the Main Tab only recipes you handle yourself are used.</li>
+              <li>Settings: You can import, export and reset the custom prices, custom success chances and disabled recipes. Those are saved for you on the website too, but if you want to share or backup them that's the way! You can also change various other settings.</li>
+            </ul>
+          </p>
+        </div>
+        <div class="FAQPoint">
+          <h1 class="FAQquestion">Important notes:</h1><br>
+          <p>
+            - You can only cook with burnables that burn at least as long as your food requires, this calculator simply ignores this fact for now.
+          </p>
+        </div>
       </div>
     </div>
   </div>
