added a way for me to reset the user data when a critical update requires that. User will get to backup their data.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styles/pageLayout/recipesLayout.css">
   <link rel="stylesheet" href="styles/pageLayout/settingsLayout.css">
   <link rel="stylesheet" href="styles/pageLayout/FAQLayout.css">
-  <link id="colorSchemeCSS" rel="stylesheet" href="styles/brightColorScheme.css">
+  <link id="colorSchemeCSS" rel="stylesheet" href="styles/darkColorScheme.css">
   <link rel="stylesheet" href="styles/treeView.css">
   <link rel="stylesheet" href="styles/resourceBreakDownTable.css">
   <link rel="stylesheet" href="styles/utility.css">
@@ -29,6 +29,7 @@
   <script src="rawDataHandling/exImRecipeSuccessChance.js"></script>
   <script src="rawDataHandling/exImEnabledRecipes.js"></script>
   <script src="rawDataHandling/exImAll.js"></script>
+  <script src="rawDataHandling/resetOnNewVersion.js"></script>
   <script src="settings/settings.js"></script>
   <script src="UIFunctions.js"></script>
   <script src="script.js"></script>
