+added the ability to import/export/reset settings

--- a/index.html
+++ b/index.html
@@ -99,6 +99,10 @@
           <div class="fancyListItem hoverable flexCol" onclick="exportEnabledRecipes()">Export Enabled Recipes</div>
           <div class="fancyListItem hoverable flexCol" onclick="importEnabledRecipes()">Import Enabled Recipes</div>
           <div class="fancyListItem hoverable flexCol" onclick="resetEnabledRecipes()">Reset Enabled Recipes</div>
+          <div class="fancyListItem"></div>
+          <div class="fancyListItem hoverable flexCol" onclick="exportSettings()">Export Settings</div>
+          <div class="fancyListItem hoverable flexCol" onclick="importSettings()">Import Settings</div>
+          <div class="fancyListItem hoverable flexCol" onclick="resetSettings()">Reset Settings</div>
         </div>
         <div id="settings" class="column">
           <div class="fancyListItem">
